syntax = "proto3";
package pbmysql;

message userField{
    int64 uid = 1;
    string uname = 2;
    int32 create_time = 3;
    int32 last_login_time = 4;
    int32 last_logout_time = 5;
    int32 vip = 6;
    int32 vip_limit_time = 7;
    int32 exp = 8;
    int32 level = 9;
    int32 figure = 10;
    string et_data = 11;
}

message offLineMsgField{
    int64 uid= 1;
    int64 id = 2;
    int32 send_time = 3;
    int64 fuid = 4;
    string funame = 5;
    int32 ffigure  = 6;
    string et_data = 7;
}